--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="profile page__section">
       <div class="profile__image" style="background-image: url('./images/avatar.jpg');"></div>
       <div class="profile__info">
-        <h1 class="profile__title">тест</h1>
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
         <p class="profile__description">Исследователь океана</p>
       </div>
