--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
 <div class="page__content">
@@ -25,7 +25,7 @@
     </section>
     <section class="places page__section">
       <ul class="places__list">
-      </тul>
+      </ul>
     </section>
   </main>
   <footer class="footer page__section">
@@ -38,8 +38,16 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+        <input
+        type="text"
+        name="name"
+        class="popup__input popup__input_type_name"
+        placeholder="Имя" required>
+        <input
+        type="text"
+        name="description"
+        class="popup__input popup__input_type_description"
+        placeholder="Занятие" required>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -49,8 +57,16 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <input
+        type="text"
+        name="place-name"
+        class="popup__input popup__input_type_card-name"
+        placeholder="Название" required>
+        <input
+        type="url"
+        name="link"
+        class="popup__input popup__input_type_url"
+        placeholder="Ссылка на картинку" required>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
